Doc: readme update